; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_fo_ioctl.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_fo_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileproc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fo_ioctl(%struct.fileproc* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.fileproc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.fileproc* %0, %struct.fileproc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = call i32 @vfs_context_proc(i32 %10)
  %12 = call i32 @proc_fdunlock(i32 %11)
  %13 = load %struct.fileproc*, %struct.fileproc** %5, align 8
  %14 = getelementptr inbounds %struct.fileproc, %struct.fileproc* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = bitcast {}** %16 to i32 (%struct.fileproc*, i32, i32, i32)**
  %18 = load i32 (%struct.fileproc*, i32, i32, i32)*, i32 (%struct.fileproc*, i32, i32, i32)** %17, align 8
  %19 = load %struct.fileproc*, %struct.fileproc** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 %18(%struct.fileproc* %19, i32 %20, i32 %21, i32 %22)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @vfs_context_proc(i32 %24)
  %26 = call i32 @proc_fdlock(i32 %25)
  %27 = load i32, i32* %9, align 4
  ret i32 %27
}

declare dso_local i32 @proc_fdunlock(i32) #1

declare dso_local i32 @vfs_context_proc(i32) #1

declare dso_local i32 @proc_fdlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
